[gd_scene load_steps=4 format=3 uid="uid://bw8lutsecsoxr"]

[ext_resource type="Script" uid="uid://cbxk7a4dshq73" path="res://Cell.gd" id="1_yh0nt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yborn"]
radius = 60.0

[sub_resource type="CircleShape2D" id="CircleShape2D_uween"]
radius = 300.0

[node name="Cell" type="Node2D"]
script = ExtResource("1_yh0nt")
energy = null
energy_decay_rate = null
hunger_threshold = null
full_threshold = null
nucleus_size = null
max_nucleus_size = null
base_membrane_radius = null
max_membrane_radius = null
vertex_count = null
stiffness = null
damping = null
wobble_intensity = null
movement_deformation = null
fusion_blend_smoothness = null
fusion_max_stretch = null
max_connections = null

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(0.7309845, 0.9999998, 0.7118558, 1)

[node name="BodyArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyArea"]
shape = SubResource("CircleShape2D_yborn")

[node name="SenseArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="SenseArea"]
shape = SubResource("CircleShape2D_uween")

[node name="Nucleus" type="Polygon2D" parent="."]
color = Color(3.133312e-05, 0.776498, 0.17558733, 1)

[connection signal="area_entered" from="BodyArea" to="." method="_on_body_area_area_entered"]
[connection signal="area_entered" from="SenseArea" to="." method="_on_sense_area_area_entered"]
[connection signal="area_exited" from="SenseArea" to="." method="_on_sense_area_area_exited"]
